--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.18.8",
     "axios": "^0.26.0",
+    "i18next": "^21.6.13",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.6",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.0",
     "react-router-dom": "^5.3.0",
