--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
+    "react-calendly": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.6",
     "react-icons": "^4.3.1",
