--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtm-sdk": "^1.4.4",
     "antd": "^4.18.8",
     "axios": "^0.26.0",
     "i18next": "^21.6.13",
